--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,7 @@ jobs:
           md5sum: false
           binary_name: gotolang
           retry: 3
-          project_path: ./main.go
+          # project_path: ./main.go
   release-windows-amd64:
     name: release windows/amd64
     runs-on: ubuntu-latest
@@ -63,7 +63,7 @@ jobs:
           md5sum: false
           binary_name: gotolang
           retry: 3
-          project_path: ./main.go
+          # project_path: ./main.go
   release-darwin-amd64:
     name: release darwin/amd64
     runs-on: ubuntu-latest
@@ -77,7 +77,7 @@ jobs:
           md5sum: false
           binary_name: gotolang
           retry: 3
-          project_path: ./main.go
+          # project_path: ./main.go
   release-darwin-arm64:
     name: release darwin/arm64
     runs-on: ubuntu-latest
@@ -91,4 +91,4 @@ jobs:
           md5sum: false
           binary_name: gotolang
           retry: 3
-          project_path: ./main.go
+          # project_path: ./main.go
